third_party/move/move-compiler-v2/tests/checking/typing/vector_no_type_inferred.exp

Diagnostics:
error: unable to infer instantiation of type `vector<_>` (consider providing type arguments or annotating the type)
  ┌─ tests/checking/typing/vector_no_type_inferred.move:4:9
  │
4 │         vector[];
  │         ^^^^^^
